# golem-launch-demo

./: .gitignore  README.md
precompiled/: archive.wasm  email-composed.wasm
prepared/phase-1/lst/src/: main.ts
prepared/phase-1/lst/wit/: main.wit
prepared/phase-2/lst/: package-lock.json
prepared/phase-2/lst/src/: main.ts
prepared/phase-2/lst/wit/: main.wit
prepared/phase-3/archive/: Makefile  main.go
prepared/phase-3/archive-stub/: Cargo.toml
prepared/phase-3/archive-stub/src/: bindings.rs
prepared/phase-3/archive/archive/: archive_types.go
prepared/phase-3/lst/: package.json
prepared/phase-3/lst/src/: main.ts
prepared/phase-3/lst/wit/: main.wit
prepared/phase-4/archive/: go.mod  main.go
prepared/phase-4/archive-stub/src/: lib.rs
prepared/phase-4/archive/archive/: archive.c  archive.go  archive.h
prepared/phase-4/email/: Cargo.toml
prepared/phase-4/email-stub/: Cargo.toml
prepared/phase-4/email-stub/src/: bindings.rs  lib.rs
prepared/phase-4/email-stub/wit/: _stub.wit
prepared/phase-4/email/src/: bindings.rs  lib.rs
prepared/phase-4/email/wit/: email.wit
prepared/phase-4/lst/: .gitignore
prepared/phase-4/lst-stub/: Cargo.toml
prepared/phase-4/lst-stub/src/: bindings.rs  lib.rs
prepared/phase-4/lst/src/: main.ts
prepared/phase-4/lst/wit/: main.wit
worker-bridge/: README.md
worker-bridge/definitions-and-scripts/: add-request-body.json  api-definition-v3.json  insert-request-body.json  reset.sh  set_up.sh  try_out.sh
