[package]
name = "email"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."demo:archive"]
path = "wit/deps/demo_archive"

[package.metadata.component.target.dependencies."demo:archive-stub"]
path = "wit/deps/demo_archive-stub"

[package.metadata.component.target.dependencies."demo:lst"]
path = "wit/deps/demo_lst"

[package.metadata.component.target.dependencies."demo:lst-stub"]
path = "wit/deps/demo_lst-stub"

[package.metadata.component.target.dependencies."golem:api"]
path = "wit/deps/golem"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."wasi:blobstore"]
path = "wit/deps/blobstore"

[package.metadata.component.target.dependencies."wasi:cli"]
path = "wit/deps/cli"

[package.metadata.component.target.dependencies."wasi:clocks"]
path = "wit/deps/clocks"

[package.metadata.component.target.dependencies."wasi:filesystem"]
path = "wit/deps/filesystem"

[package.metadata.component.target.dependencies."wasi:http"]
path = "wit/deps/http"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[package.metadata.component.target.dependencies."wasi:keyvalue"]
path = "wit/deps/keyvalue"

[package.metadata.component.target.dependencies."wasi:logging"]
path = "wit/deps/logging"

[package.metadata.component.target.dependencies."wasi:random"]
path = "wit/deps/random"

[package.metadata.component.target.dependencies."wasi:sockets"]
path = "wit/deps/sockets"

[dependencies]
serde_json = "1.0"

[dependencies.golem-rust]
version = "1.0.0"

[dependencies.golem-rust-macro]
version = "1.0.0"

[dependencies.reqwest]
git = "https://github.com/zivergetech/reqwest"
branch = "update-jun-2024"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
